feat: change calendar on cake

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <div class="info">
         <span>📌 Software Developer</span>
         <span>💻 RTA Technologies | Fullstack Dev</span>
-        <span>📅 22 y.o.</span>
+        <span>🎂 22 y.o.</span>
         <span>📍 Moscow, Russia</span>
       </div>
     </div>
